--- a/App.config
+++ b/App.config
@@ -1,19 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-  </startup>
   <connectionStrings>
-    <add name="Salmanova41Entities" connectionString="metadata=res://*/SalmanovaModel.csdl|res://*/SalmanovaModel.ssdl|res://*/SalmanovaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STUD231-2;initial catalog=Salmanova41;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Salmanova41Entities" connectionString="metadata=res://*/SalmanovaModel.csdl|res://*/SalmanovaModel.ssdl|res://*/SalmanovaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-IDEAPAD-;initial catalog=Salmanova41;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
 </configuration>
